# snortal

./: Cargo.toml  README.md
.github/workflows/: lint.yml  release.yml  test.yml
aur/: .SRCINFO  PKGBUILD
src/: install.rs  main.rs  output.rs  types.rs
src/detectors/: dhcp_lease.rs  gateway_probe.rs  http_probe.rs  mod.rs  networkmanager_device.rs  nm_connectivity_conf.rs  nmcli.rs  wpa_supplicant.rs
