[package]
name = "captive-portal-finder"
version = "1.0.0"
edition = "2021"
description = "Detect captive portal URLs on a Linux network"
authors = ["George Oastler <goastler4@gmail.com>"]
license = "MIT"

[[bin]]
name = "captive-portal-finder"
path = "src/main.rs"

[dependencies]
tokio   = { version = "1",    features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
clap    = { version = "4",    features = ["derive"] }
futures = "0.3"
url     = "2"
