[package]
name = "snortal"
version = "1.0.10"
edition = "2021"
description = "Detect captive portal URLs on a Linux network"
authors = ["George Oastler <goastler4@gmail.com>"]
license = "AGPL-3.0-or-later"

[[bin]]
name = "snortal"
path = "src/main.rs"

[package.metadata.deb]
section = "net"
depends = "libc6"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/snortal", dest = "/usr/bin/snortal", mode = "755" },
]

[dependencies]
tokio      = { version = "1",    features = ["full"] }
reqwest    = { version = "0.12", features = ["rustls-tls"], default-features = false }
clap       = { version = "4",    features = ["derive"] }
futures    = "0.3"
url        = "2"
serde_json = "1"
